# papercup

./: .gitignore  README.md  constants.py  main.py  pyproject.toml
assets/: input.json  input.srt
model/: sentence.py
services/: json_file_service.py  optimize_service.py  srt_file_service.py
services/tests/: test_json_file_service.py  test_optimize_service.py
