[tool.poetry]
name = "papercup"
version = "0.1.0"
description = ""
authors = ["Karen Manktelow <karen.manktelow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
srt = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
